# loadstructure

./: README.md  changelog.md  data.tkproj  new_data.tkproj  pyproject.toml  test.py  test2.py  test_config.json
loadsettings/: __init__.py  config_node.py  main.py
loadstructure/: __init__.py  cli.py  config_node.py  main.py
loadstructure/utils/: helper.py
