[project]
name = "loadsettings"
version = "0.1.0"
description = "A versatile Python library for loading and managing configuration files (JSON, YAML, XML, TOML, and INI/DEF-style) with attribute-style access, merging capabilities."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "pyyaml>=6.0.3",
    "toml>=0.10.2",
    "xmltodict>=1.0.2",
]
[project.urls]
Homepage = "https://github.com/TechRuler/loadsettings"